Pull in search_year for faceting as sort_date won't work; Ensure 'more' facets use the helper

--- a/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
@@ -10,6 +10,7 @@
 <%= presenter.attribute_to_html(:language) %>
 <%= presenter.attribute_to_html(:date_created, label: 'Date Created') %>
 <%= presenter.attribute_to_html(:sort_date, label: 'Sort Date') %>
+<%= presenter.attribute_to_html(:search_year, label: 'Search Year') %>
 <%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: 'Display Date') %>
 <%= presenter.attribute_to_html(:copyright_holder, label: 'Copyright Holder') %>
 <%= presenter.attribute_to_html(:copyright_status, label: 'Copyright Status') %>
