--- a/app/views/curation_concerns/file_sets/_form.html.erb
+++ b/app/views/curation_concerns/file_sets/_form.html.erb
@@ -97,6 +97,8 @@
 
           <%= f.input :sort_date, input_html: { class: 'form-control' }, placeholder: 'YYYY-MM-DD' %>
 
+          <%= f.input :search_year, input_html: { class: 'form-control' }, placeholder: 'YYYY' %>
+
           <span class="control-label">
             <%= label_tag 'file_set[display_date]', 'Display Date',  class: 'string optional' %>
           </span>
