customize navigation bar for app-level and press-level

--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -1,6 +1,6 @@
-/* Press themes are collected here */
+// Press themes are collected here
 
 // Northwestern University Press
-.nwup {
+.northwestern {
 
 }
