--- a/app/views/shared/_brand_bar.html.erb
+++ b/app/views/shared/_brand_bar.html.erb
@@ -1,5 +1,5 @@
 <nav id="brand-bar" class="navbar navbar-default navbar-inverse navbar-static-top">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#brand-bar-nav" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
