--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,13 @@
 <header id="banner" role="banner">
   <hgroup>
-    <%= render 'shared/brand_bar' %>
-    <%= render 'shared/title_bar' %>
+    <% if defined?(@press.subdomain) %>
+      <%= render 'shared/brand_press_bar' %>
+    <% elsif defined?(@monograph_presenter.subdomain) %>
+      <%= render 'shared/brand_press_bar' %>
+    <% elsif defined?(@presenter.monograph.subdomain) %>
+      <%= render 'shared/brand_press_bar' %>
+    <% else %>
+      <%= render 'shared/brand_bar' %>
+    <% end %>
   </hgroup>
 </header>
