--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -1,10 +1,34 @@
 // custom styles for heliotrope
 
-// navigation menu
+// sitewide
 
+// navigation menu
+.navbar {
+  margin-bottom: 0;
+}
+
+// press
+.jumbotron {
+
+  .container {
+    margin-top: 3em;
+  }
+
+  .logo {
+
+    img {
+      width: 180px;
+      height: auto;
+      margin: 0 1em 1em 0;
+    }
+
+  }
+
+}
 
 // monograph
 .monograph {
+  margin-top: 5em;
 
   .monograph-info {
 
@@ -61,6 +85,7 @@
 
 // asset pages
 .asset {
+  margin-top: 5em;
 
   // leaflet-images
   #image {
