--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,3 +11,6 @@
     <% end %>
   </hgroup>
 </header>
+<% if defined?(@press.subdomain) %>
+  <%= render 'shared/brand_press_jumbotron' %>
+<% end %>
