--- a/app/views/shared/_brand_press_jumbotron.html.erb
+++ b/app/views/shared/_brand_press_jumbotron.html.erb
@@ -7,6 +7,6 @@
           </div>
         <% end %>
 
-        <p class="lead"><%= @press.description %></p>
+        <p class="lead"><%= render_markdown @press.description %></p>
       </div>
     </div>
