build out nw theme

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -1,4 +1,4 @@
-// custom styles for heliotrope
+// the out-of-the-box layout for heliotrope
 
 // navigation menu
 .navbar {
@@ -6,7 +6,6 @@
 }
 
 // footer
-// generic press
 footer.press {
   background-color: #262626;
   color: #fff;
