--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -2,5 +2,5 @@
 <% provide :page_class, 'press' %>
 
 <div id="content">
-  <%= render 'catalog/search_results' %>
+  <%= render 'catalog/press_results' %>
 </div>
