do not show quotes or brackets in alt text for media

--- a/app/views/curation_concerns/file_sets/_media.html.erb
+++ b/app/views/curation_concerns/file_sets/_media.html.erb
@@ -1,4 +1,4 @@
-<div class="image" title="<%= @presenter.alt_text %>">
+<div class="image" title="<%= @presenter.alt_text.first %>">
     <% if @presenter.image? %>
       <div id="image"></div>
       <script>
