--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="footer-text col-md-12">
       <p>
-        Powered by <a href="https://github.com/projecthydra-labs/curation_concerns">CurationConcerns</a>.<br />
-        Made possible by the <a href="http://projecthydra.org">Hydra</a> project.
+        Powered by <a href="https://github.com/projecthydra-labs/curation_concerns">CurationConcerns</a> | Made possible by the <a href="http://projecthydra.org">Hydra</a> project | <% if current_user %> <%= link_to 'Log Out', main_app.destroy_user_session_path, class: 'log-out', role: 'menuitem' %> <% else %> <%= link_to 'Log In', main_app.new_user_session_path, class: 'login', role: 'menuitem' %>
+        <% end %>
       </p>
     </div>
   </div>
