--- a/app/views/shared/_brand_press_bar.html.erb
+++ b/app/views/shared/_brand_press_bar.html.erb
@@ -28,7 +28,10 @@
 
     <div class="collapse navbar-collapse" id="brand-bar-nav">
       <div class="navbar-right">
-        <%= render 'shared/site_actions' if show_site_actions? %>
+        <% if current_user && show_site_actions? %>
+          <%= render 'shared/add_content' %>
+          <%= render 'shared/my_actions' %>
+        <% end %>
       </div>
     </div>
   </div>
