--- a/app/views/shared/_brand_press_footer.html.erb
+++ b/app/views/shared/_brand_press_footer.html.erb
@@ -37,7 +37,7 @@
         </ul> -->
       </div>
       <div class="col-sm-4 platform col">
-        <p>Powered by <a href="#">Fulcrum</a></p>
+        <p>Powered by <a href="http://fulcrum.org" title="Fulcrum"><%= image_tag "fulcrum-white-50px.png", class: 'logo', alt: 'Fulcrum Beta logo' %></a> <a class="beta" href="http://fulcrum.org/beta" title="Fulcrum Beta information">beta</a></p>
         <ul class="list-unstyled">
           <!-- <li><a href="#">Help</a></li> -->
           <li><a href="http://fulcrum.org/about/">About</a></li>
