--- a/app/views/shared/_brand_press_bar.html.erb
+++ b/app/views/shared/_brand_press_bar.html.erb
@@ -31,6 +31,8 @@
         <% if current_user && show_site_actions? %>
           <%= render 'shared/add_content' %>
           <%= render 'shared/my_actions' %>
+        <% else %>
+          <a href="http://fulcrum.org" title="Fulcrum"><%= image_tag "fulcrum-mark-white-30px.png", class: 'logo', alt: 'Fulcrum Beta logo' %></a> <a class="beta" href="http://fulcrum.org/beta" title="Fulcrum Beta information">beta</a>
         <% end %>
       </div>
     </div>
