refactor jekyll rake tasks to share variables across tasks; force use https for google fonts

--- a/fulcrum/_includes/head.html
+++ b/fulcrum/_includes/head.html
@@ -27,8 +27,8 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Fonts -->
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="//fonts.googleapis.com/css?family=Crete+Round:400,400italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Crete+Round:400,400italic" rel="stylesheet" type="text/css">
   <script src="//use.typekit.net/fob1mqk.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
