--- a/app/views/press_catalog/_index_header_list_monograph.html.erb
+++ b/app/views/press_catalog/_index_header_list_monograph.html.erb
@@ -6,7 +6,7 @@
         <% counter = document_counter_with_offset(document_counter) %>
         <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
       </h2>
-      <h3><%= render_markdown document.creator_given_name.first || '' %> <%= render_markdown document.creator_family_name.first || '' %></h3>
+      <h3><%= render_markdown document.creator_given_name.first || '' %> <%= render_markdown document.creator_family_name.first || '' %><%= contributors_string(document.contributor) %></h3>
       <p><%= render_markdown document.description.first || '' %></p>
     </div>
   </div>
