--- a/app/views/monograph_catalog/_index_file_set.html.erb
+++ b/app/views/monograph_catalog/_index_file_set.html.erb
@@ -1,10 +1,9 @@
-<% doc_presenter = index_presenter(document) %>
 <%# default partial to display solr document fields in catalog index view -%>
-<div class="document-metadata">
+  <div class="document-metadata">
 
     <% index_fields(document).each do |field_name, field| -%>
       <% if should_render_index_field? document, field %>
-        <p class="blacklight-<%= field_name.parameterize %>"><%= render_markdown doc_presenter.field_value field_name %></p>
+  	    <p class="blacklight-<%= field_name.parameterize %>"><%= render_markdown render_index_field_value document, field: field_name %></p>
       <% end -%>
     <% end -%>
 
