--- a/app/views/catalog/_index_monograph.html.erb
+++ b/app/views/catalog/_index_monograph.html.erb
@@ -1,9 +1,10 @@
+<% doc_presenter = index_presenter(document) %>
 <dl class="document-metadata dl-horizontal dl-invert">
 
   <% index_fields(document).each do |field_name, field| -%>
     <% if should_render_index_field? document, field %>
 	    <dt class="blacklight-<%= field_name.parameterize %>"><%= render_index_field_label document, field: field_name %></dt>
-	    <dd class="blacklight-<%= field_name.parameterize %>"><%= render_markdown render_index_field_value document, field: field_name %></dd>
+      <dd class="blacklight-<%= field_name.parameterize %>"><%= render_markdown doc_presenter.field_value field_name %></dd>
     <% end -%>
   <% end -%>
 
