--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -8,4 +8,15 @@
 <%= presenter.attribute_to_html(:keywords, catalog_search_link: true) %>
 <%= presenter.attribute_to_html(:content_type, label: 'Content Type') %>
 <%= presenter.attribute_to_html(:language) %>
+<!-- TODO: replace permalink display with model generated handle/doi instead of constructing it here -->
+<tr>
+  <th>Citable Link</th>
+  <td>
+    <ul class="tabular list-unstyled">
+      <li class="attribute permalink">
+        <a href="http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %>">http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %></a>
+      </li>
+    </ul>
+  </td>
+</tr>
 <%= presenter.attribute_to_html(:identifier) %>
