by default, display the Holding Contact label on the asset show page; for NW project, don't show the Holding Contact label; change the Holding Contact field in the asset edit form to a text area to allow for complex formatting of the Holding Contact text

--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -148,6 +148,15 @@ $fulcrum-light-2: #bec4cc;
     ul.nav-tabs li {
       @include freight-sans-book;
     }
+
+    #permissions {
+      table tbody tr:last-of-type {
+          th {
+            display: none;
+          }
+      }
+      
+    }
   }
 
   //footer
