--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -14,7 +14,7 @@
         <div class="col-sm-12">
           <h2><%= render_markdown @presenter.page_title %></h2>
           <h3>From <em><%= render_markdown link_to @presenter.monograph.title.first, "/concern/monographs/#{@presenter.monograph.id}" %></em>
-            by <%= @presenter.monograph.creator_given_name.first %> <%= @presenter.monograph.creator_family_name.first %></h3>
+            by <%= @presenter.monograph.creator_given_name.first %> <%= @presenter.monograph.creator_family_name.first %><%= contributors_string(@presenter.monograph.contributor) %></h3></h3>
           <br />
           <%= render "attributes", presenter: @presenter %>
         </div>
