--- a/app/views/shared/_brand_press_footer.html.erb
+++ b/app/views/shared/_brand_press_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row col-wrap">
       <div class="col-sm-4 social col">
-        <p>
+        <div class="crop">
           <% if defined?(@press.logo_path) %>
             <%= image_tag @press.logo_path, alt: @press.name, class: 'img-responsive' %><br /><br />
           <% elsif defined?(@monograph_presenter.press_logo) %>
@@ -10,6 +10,8 @@
           <% elsif defined?(@presenter.monograph.press_logo) %>
             <%= image_tag @presenter.monograph.press_logo, alt: @presenter.monograph.press, class: 'img-responsive' %><br /><br />
           <% end %>
+        </div>
+        <p>
           <% if defined?(@press.press_url) %>
             <a class="brand" href="<%= @press.press_url %>"><%= @press.name %></a>
           <% elsif defined?(@monograph_presenter.press_url) %>
