Resolves #526: Remove markdown in Twitter share link.

--- a/app/views/curation_concerns/file_sets/_show_actions.html.erb
+++ b/app/views/curation_concerns/file_sets/_show_actions.html.erb
@@ -13,7 +13,7 @@
   <div class="btn-group share">
     <button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Share <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="http://twitter.com/intent/tweet?text=<%= @presenter %>&amp;url=http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %>">Twitter</a></li>
+        <li><a href="http://twitter.com/intent/tweet?text=<%= @presenter.page_title %>&amp;url=http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %>">Twitter</a></li>
         <li><a href="http://www.facebook.com/sharer.php?u=http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %>&amp;t=<%= @presenter %>">Facebook</a></li>
         <li><a href="https://plus.google.com/share?url=http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %>">Google+</a></li>
         <li><a href="http://www.reddit.com/submit?url=http://hdl.handle.net/2027/fulcrum.<%= @presenter.id %>">Reddit</a></li>
