--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -149,15 +149,12 @@ $umn-white: #fff;
       background-color: $umn-accent-footer-aqua;
 
       .crop {
-        height: 44px;
-        width: 65px;
-        overflow: hidden;
-        margin-top: 4em;
-        margin-bottom: 1em;
+        height: 126px;
+        width: auto;
       }
 
       img {
-        width: 70px;
+        width: 45px;
       }
 
       p {
