Resolves #487: Changed display: inline to display: inline-flex.

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -174,8 +174,12 @@ footer.press {
   }
 
   .keywords {
-    display: inline;
+    display: inline-flex;
     margin-right: .5em;
+  }
+
+  .keywords:not(:last-of-type):after {
+   content: ", ";
   }
 
   .translation, .transcript {
