--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -1,12 +1,12 @@
 <p><%= presenter.attribute_to_html(:description, render_as: :markdown, label: '') %></p>
-<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', catalog_search_link: true) %>
+<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', render_as: :faceted, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:primary_creator_role, label: 'Creator Role') %>
-<%= presenter.attribute_to_html(:contributor, label: 'Contributors', catalog_search_link: true) %>
+<%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :faceted, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:subjects) %>
 <%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: 'Date') %>
-<%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :markdown) %>
-<%= presenter.attribute_to_html(:keywords, catalog_search_link: true) %>
-<%= presenter.attribute_to_html(:content_type, label: 'Content Type') %>
+<%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :faceted, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:keywords, render_as: :faceted, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:content_type, label: 'Content Type', render_as: :linked) %>
 <%= presenter.attribute_to_html(:language) %>
 <!-- TODO: replace permalink display with model generated handle/doi instead of constructing it here -->
 <tr>
