modify footer font color

--- a/app/assets/stylesheets/themes.scss
+++ b/app/assets/stylesheets/themes.scss
@@ -142,7 +142,7 @@ $umn-white: #fff;
     a,
     a:hover,
     a:active {
-      color: $umn-white;
+      color: $umn-black-80;
     }
     .social,
     .footer-nav {
