--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -6,8 +6,8 @@
 <%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: 'Date') %>
 <%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :faceted, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:keywords, render_as: :faceted, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:content_type, label: 'Content Type', render_as: :linked) %>
-<%= presenter.attribute_to_html(:language) %>
+<%= presenter.attribute_to_html(:content_type, render_as: :linked, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:language, render_as: :faceted, monograph_id: presenter.monograph.id) %>
 <!-- TODO: replace permalink display with model generated handle/doi instead of constructing it here -->
 <tr>
   <th>Citable Link</th>
