--- a/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows_info.html.erb
@@ -1,13 +1,13 @@
 <p><%= presenter.attribute_to_html(:description, render_as: :markdown, label: '') %></p>
-<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', render_as: :faceted, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:primary_creator_role, label: 'Creator Role') %>
-<%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :faceted, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:creator_full_name, label: 'Creator', render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:primary_creator_role, label: 'Creator Role', render_as: :monograph_search, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:contributor, label: 'Contributors', render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <%= presenter.attribute_to_html(:subjects) %>
 <%= presenter.attribute_to_html(:display_date, render_as: :markdown, label: 'Date') %>
-<%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :faceted, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:keywords, render_as: :faceted, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:content_type, render_as: :linked, monograph_id: presenter.monograph.id) %>
-<%= presenter.attribute_to_html(:language, render_as: :faceted, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:section_title, label: 'Related Chapter', render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:keywords, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:content_type, render_as: :monograph_search, monograph_id: presenter.monograph.id) %>
+<%= presenter.attribute_to_html(:language, render_as: :monograph_facet, monograph_id: presenter.monograph.id) %>
 <!-- TODO: replace permalink display with model generated handle/doi instead of constructing it here -->
 <tr>
   <th>Citable Link</th>
