--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -16,7 +16,9 @@
         <%= link_to "Manage Monograph and Files", main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
       <% end %>
       <h3><%= @monograph_presenter.creator_given_name.first %> <%= @monograph_presenter.creator_family_name.first %><%= contributors_string(@monograph_presenter.contributor) %></h3>
-      <p class="description"><%= render_markdown @monograph_presenter.description.first || '' %></p>
+      <div class="description">
+      <p><%= render_markdown @monograph_presenter.description.first || '' %></p>
+      </div>
       <div class="isbn">
         <% if defined?(@monograph_presenter.isbn) %>
         <ul class="isbn-hardcover list-unstyled">
@@ -44,7 +46,7 @@
       <% if defined?(@monograph_presenter.buy_url) %>
       <div class="btn-toolbar" role="toolbar" aria-label="">
         <div class="btn-group" role="group" aria-label="">
-            <a href="<%= @monograph_presenter.buy_url.first %>" target="_blank" title="Buy <%= @monograph_presenter.title.first %>" role="button" class="btn btn-default btn-small">Buy Book</a>
+            <a href="<%= @monograph_presenter.buy_url.first %>" target="_blank" title="Buy <%= @monograph_presenter.title %>" role="button" class="btn btn-default btn-small">Buy Book</a>
         </div>
       </div>
       <% end %>
